--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,15 @@ min-width: 300px;
 }
 
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto+Mono:wght@200;300;400&family=Roboto+Slab:wght@100;200;300;400&display=swap');
+
 .montserrat {
 font-family: 'Montserrat', sans-serif;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400&display=swap');
 .robotoMono {
 font-family: 'Roboto Mono', monospace;
+}
+.monoSlab {
+font-family: 'Roboto Slab', serif;
 }
