- Add navigation to swiper for slide indicators and center all slider contents
- Add css styles to Slider
- Add css stying/position for slider content

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+	--swiper-navigation-top-offset: 6%;
+	--swiper-pagination-bullet-width: 14px;
+	--swiper-pagination-bullet-height: 14px;
+	--swiper-pagination-bullet-horizontal-gap: 4px;
+}
