- Add same page href,id links
- Add ids to sections
- Remove works in Navbar.jsx and styling conditional
- Add smooth scroll in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@
 	--swiper-pagination-bullet-height: 14px;
 	--swiper-pagination-bullet-horizontal-gap: 4px;
 }
+
+html {
+	scroll-behavior: smooth;
+}
