--- a/src/css/marketingPlan.css
+++ b/src/css/marketingPlan.css
@@ -1,6 +1,7 @@
 .inline-container {
 	display: block;
+	width: fit-content;
 	box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-	margin: 40px auto;
+	margin: auto auto;
 	margin-top: 40px;
 }
